crates/pg_syntax/tests/snapshots/postgres_regress/prepare@25.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM q5_prep_results;
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..29
    Ident@14..29 "q5_prep_results"
  Ascii59@29..30 ";"

