crates/pg_syntax/tests/snapshots/postgres_regress/prepare@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT name, statement, parameter_types FROM pg_prepared_statements\n    ORDER BY name;"
---
SelectStmt@0..86
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..11
    ColumnRef@7..11
      NameP@7..11 "name"
  Ascii44@11..12 ","
  Whitespace@12..13 " "
  ResTarget@13..22
    ColumnRef@13..22
      Statement@13..22 "statement"
  Ascii44@22..23 ","
  Whitespace@23..24 " "
  ResTarget@24..39
    ColumnRef@24..39
      Ident@24..39 "parameter_types"
  Whitespace@39..40 " "
  From@40..44 "FROM"
  Whitespace@44..45 " "
  RangeVar@45..67
    Ident@45..67 "pg_prepared_statements"
  Newline@67..68 "\n"
  Whitespace@68..72 "    "
  SortBy@72..85
    Order@72..77 "ORDER"
    Whitespace@77..78 " "
    By@78..80 "BY"
    Whitespace@80..81 " "
    ColumnRef@81..85
      NameP@81..85 "name"
  Ascii59@85..86 ";"

