crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@1.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE rngfunc2(rngfuncid int, f2 int);"
---
CreateStmt@0..45
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "rngfunc2"
  Ascii40@21..22 "("
  ColumnDef@22..35
    Ident@22..31 "rngfuncid"
    Whitespace@31..32 " "
    TypeName@32..35
      IntP@32..35 "int"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ColumnDef@37..43
    Ident@37..39 "f2"
    Whitespace@39..40 " "
    TypeName@40..43
      IntP@40..43 "int"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

