crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@111.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM getrngfunc6(1) AS t1(rngfuncid int, rngfuncsubid int, rngfuncname text);"
---
SelectStmt@0..86
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..84
    List@14..27
      FuncCall@14..27
        Ident@14..25 "getrngfunc6"
        Ascii40@25..26 "("
        AConst@26..27
          Iconst@26..27 "1"
    Ascii41@27..28 ")"
    Whitespace@28..29 " "
    Alias@29..34
      As@29..31 "AS"
      Whitespace@31..32 " "
      Ident@32..34 "t1"
    Ascii40@34..35 "("
    ColumnDef@35..48
      Ident@35..44 "rngfuncid"
      Whitespace@44..45 " "
      TypeName@45..48
        IntP@45..48 "int"
    Ascii44@48..49 ","
    Whitespace@49..50 " "
    ColumnDef@50..66
      Ident@50..62 "rngfuncsubid"
      Whitespace@62..63 " "
      TypeName@63..66
        IntP@63..66 "int"
    Ascii44@66..67 ","
    Whitespace@67..68 " "
    ColumnDef@68..84
      Ident@68..79 "rngfuncname"
      Whitespace@79..80 " "
      TypeName@80..84
        TextP@80..84 "text"
  Ascii41@84..85 ")"
  Ascii59@85..86 ";"

